# MCP_Hackathon

./: Dockerfile  README.md  agent.py  alice_profile.pkl  db.py  evil_pickle_generate.py  load_pickle.py  main.py  mcp.db  pyproject.toml  secrets.env  tools.py
data/: alice_profile.pkl
mcp/: config.py  db.py  mcp_server.py  models.py
static/: style.css
templates/: index.html
utils/: evil_pickle_generate.py  load_pickle.py
