[project]
name = "mcp-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.115.12",
    "smolagents[litellm]>=1.18.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
]
